--- a/projects/titanic_survival_exploration/titanic_survival_exploration.ipynb
+++ b/projects/titanic_survival_exploration/titanic_survival_exploration.ipynb
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** *Replace this text with the prediction accuracy you found above.*"
+    "**Answer:** 61.62%"
    ]
   },
   {
@@ -228,7 +228,7 @@
     "        \n",
     "        # Remove the 'pass' statement below \n",
     "        # and write your prediction conditions here\n",
-    "        pass\n",
+    "        predictions.append(passenger['Sex'] == 'female')\n",
     "    \n",
     "    # Return our predictions\n",
     "    return pd.Series(predictions)\n",
@@ -261,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: *Replace this text with the prediction accuracy you found above.*"
+    "**Answer**: 78.68%"
    ]
   },
   {
@@ -313,7 +313,7 @@
     "        \n",
     "        # Remove the 'pass' statement below \n",
     "        # and write your prediction conditions here\n",
-    "        pass\n",
+    "        predictions.append(passenger['Sex'] == 'female' or passenger['Age'] < 10)\n",
     "    \n",
     "    # Return our predictions\n",
     "    return pd.Series(predictions)\n",
@@ -346,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: *Replace this text with the prediction accuracy you found above.*"
+    "**Answer**: 79.35%"
    ]
   },
   {
@@ -397,9 +397,16 @@
     "    predictions = []\n",
     "    for _, passenger in data.iterrows():\n",
     "        \n",
-    "        # Remove the 'pass' statement below \n",
-    "        # and write your prediction conditions here\n",
-    "        pass\n",
+    "        if passenger['Sex'] == 'female':\n",
+    "            if passenger['Pclass'] == 3:\n",
+    "                predictions.append(passenger['SibSp'] != 1 and passenger['Fare'] < 20)\n",
+    "            else:\n",
+    "                predictions.append(1)\n",
+    "        else:\n",
+    "            if passenger['Age'] < 10:\n",
+    "                predictions.append(passenger['SibSp'] < 3)\n",
+    "            else:\n",
+    "                predictions.append(0)\n",
     "    \n",
     "    # Return our predictions\n",
     "    return pd.Series(predictions)\n",
@@ -432,7 +439,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: *Replace this text with your answer to the question above.*"
+    "**Answer**: My prediction accuracy is 83.16%.\n",
+    "I tried the fearures one by one on the diagram and when I found any significant difference between the displayed values, I splitted them and created a condition. For example if I select Sex without any filters I can see females are more likely to survive, males are not. I created a condition by Sex and continued to investigate the two branches individually by finding other usable features. For males another usable feature was the Age, as well as Pclass for females."
    ]
   },
   {
@@ -455,7 +463,7 @@
     "collapsed": true
    },
    "source": [
-    "**Answer**: *Replace this text with your answer to the question above.*"
+    "**Answer**: One possible application is Targeted Advertising. It can be trained as a classification problem (interested - not interested) of people with features like Sex, Age, Geographical location or Qualification."
    ]
   },
   {
@@ -469,9 +477,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -483,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
